# metrics-htb

./: .gitignore  README.md  generate-badge.py  generate.py  htb-metrics.yml.example  htbctrl.py  htbm.py  pyproject.toml  requirements.txt
.github/workflows/: update-metrics.yml
assets/templates/: classic.html  compact.html  github-plugin.html  hacker-red.html  hacker-yellow.html  light.html  minimal.html  profile-card.html  rank-card.html  season-card.html  terminal.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  WORKLOG.md
docs/guides/: README.md  badge-development.md  badge-getting-started.md  badge-github-actions.md  badge-templates.md  badge-troubleshooting.md  cli-development.md  cli-getting-started.md  cli-troubleshooting.md  cli-usage.md  configuration.md  dashboard-customization.md  dashboard-development.md  dashboard-features.md  dashboard-getting-started.md  data-sources.md  development.md  getting-started.md  github-actions.md  installation.md  templates.md  troubleshooting.md
examples/: README.md
examples/config/: .env.example  htb-cli.yml.example  htb-ctrl.yml.example  (+1 more)
htb_metrics/: cli.py  config.py  dataset.py  fetch.py  render.py
refs/: README.md
scripts/: download_icons.py  install.sh
tests/: conftest.py  test_argv.py  test_bootstrap.py  test_cache_icons.py  test_cli_callback.py  test_cli_commands.py  test_cli_config.py  test_config.py  test_ctrl_config.py  test_dashboard_sheet.py  test_dataset.py  test_e2e.py  test_examples.py  test_fetch.py  test_htbctrl.py  test_paths.py  test_refs.py  test_render.py
(+83 files in other folders)
