[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-ctrl"
version = "2.0.0"
description = "Hack The Box companion for CLI workflows, progress visualization, spreadsheet-powered dashboards, and automated GitHub README profile badges."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "python-dotenv",
    "playwright",
    "colorama",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
]

[project.scripts]
htb-ctrl = "ctrl_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
